Fix Performance of CodelistBeanImpl instantiation when large number of child codes involved (#87)
Adds a map to a codelist bean instance for fast lookup of codes by id.

Co-authored-by: Oleksandr Buhaiov <oleksandr_buhaiov@epam.com>